# blueprint-kit

./: .gitignore  AGENTS.md  README.md  USAGE.md  add_function.py  add_function_v2.py  blueprint-driven.md  generate-agent-commands-README.md  generate-agent-commands.py  pyproject.toml
.github/workflows/: release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-current-and-previous-tags.sh  get-tag-version.sh
docs/: .gitignore  README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/blueprint_cli/: __init__.py
src/blueprint_cli/commands/: check.py  init.py
src/blueprint_cli/core/: agent_config.py  cli.py  step_tracker.py  utils.py
src/blueprint_cli/services/: git.py  github.py
templates/: agent-file-template.md  agent-persona-guide.md  blueprint-template.md  goal-template.md  plan-template.md  spec-template.md  sync-template.md  tasks-template.md
templates/commands/: analyze.md  blueprint.md  checklist.md  clarify.md  constitution.md  goal.md  implement.md  plan.md  specify.md  sync.md  tasks.md
