[project]
name = "blueprint-cli"
version = "1.0.31"
description = "Blueprint CLI, part of Blueprint Kit. A tool to bootstrap your projects for Blueprint-Driven Development (BDD)."
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
blueprint = "blueprint_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blueprint_cli"]
include = ["templates/**/*"]